small spacing fixes

--- a/src/layout/about.scss
+++ b/src/layout/about.scss
@@ -58,6 +58,9 @@
   list-style: none;
   line-height: 0;
   @include mb(32,96);
+  @media only screen and (max-width: 650px) {
+    text-align: center;
+  }
 
   & li {
     display: inline-block;
