--- a/src/layout/template.scss
+++ b/src/layout/template.scss
@@ -58,6 +58,7 @@ main {
 
       @media only screen and (max-width: 1240px) {
         width: 100%;
+        min-width: 0;
       }
     }
 
